remove margin auto on figure to fix cls shift

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -189,7 +189,7 @@ figure {
   display: flex;
   flex-flow: column;
   padding: 5px;
-  margin: auto;
+
 }
 
 figcaption {
